force-app/main/default/objects/QOServiceProductCombination__mdt/QOServiceProductCombination__mdt.object-meta.xml
<CustomObject>
    <label>QOServiceProductCombination</label>
    <pluralLabel>QOServiceProductCombination</pluralLabel>
</CustomObject>