force-app/main/default/objects/QOServiceProductCombination__mdt/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <label>Case Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empty and Return</fullName>
                <default>true</default>
                <label>Empty and Return</label>
            </value>
            <value>
                <fullName>Empty and Do NOT Return</fullName>
            </value>
            <value>
                <fullName>On-Call Pickup</fullName>
            </value>
            <value>
                <fullName>Extra Pickup</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Power Wash</fullName>
            </value>
            <value>
                <fullName>Relocate Container</fullName>
            </value>
            <value>
                <fullName>Fee(s)</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Haul Away - No Equipment</fullName>
            </value>
            <value>
                <fullName>Existing Location</fullName>
            </value>
            <value>
                <fullName>Service Not Performed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>