force-app/main/default/objects/QOServiceProductCombination__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pickup</fullName>
                <default>true</default>
                <label>Pickup</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>New Service</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Special Request</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>