force-app/main/default/objects/QOServiceProductCombination__mdt/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEMP</fullName>
                <default>true</default>
                <label>Temporary</label>
            </value>
            <value>
                <fullName>PERM</fullName>
                <label>Permanent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>