force-app/main/default/objects/QOServiceProductCombination__mdt/fields/IsExtraPickup__c.field-meta.xml
<CustomField>
    <fullName>IsExtraPickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExtraPickup</label>
    <type>Checkbox</type>
</CustomField>