force-app/main/default/objects/QOServiceProductCombination__mdt/fields/IsTransformation__c.field-meta.xml
<CustomField>
    <fullName>IsTransformation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsTransformation</label>
    <type>Checkbox</type>
</CustomField>