force-app/main/default/objects/QOServiceProductCombination__mdt/fields/PO_Mandatory_Scenario__c.field-meta.xml
<CustomField>
    <fullName>PO_Mandatory_Scenario__c</fullName>
    <description>SDT-20110, Defines the PO mandatory scenario.</description>
    <label>PO Mandatory Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NS_PERM</fullName>
            </value>
            <value>
                <fullName>NS_TEMP</fullName>
            </value>
            <value>
                <fullName>PCK_ER</fullName>
            </value>
            <value>
                <fullName>PCK_EXPCK</fullName>
            </value>
            <value>
                <fullName>PCK_OC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>