force-app/main/default/objects/QOServiceProductCombination__mdt/fields/Primary_Component__c.field-meta.xml
<CustomField>
    <fullName>Primary_Component__c</fullName>
    <label>Primary Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Haul</fullName>
                <default>true</default>
                <label>Haul</label>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Extra Pickup</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Container Service Charge</fullName>
            </value>
            <value>
                <fullName>Power Spray Wash</fullName>
            </value>
            <value>
                <fullName>Keys</fullName>
            </value>
            <value>
                <fullName>Swapout</fullName>
            </value>
            <value>
                <fullName>Contamination Fee</fullName>
            </value>
            <value>
                <fullName>Dig Out</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Got Junk Pickup</fullName>
            </value>
            <value>
                <fullName>Hand Pickup</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Odor-Eater</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
            <value>
                <fullName>Haul Away Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>