force-app/main/default/objects/QOServiceProductCombination__mdt/fields/ServiceProdFilter__c.field-meta.xml
<CustomField>
    <fullName>ServiceProdFilter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ServiceProdFilter</label>
    <type>Checkbox</type>
</CustomField>