force-app/main/default/objects/QOServiceProductCombination__mdt/listViews/Mapping.listView-meta.xml
<ListView>
    <fullName>Mapping</fullName>
    <columns>MasterLabel</columns>
    <columns>Service__c</columns>
    <columns>Primary_Component__c</columns>
    <columns>IsExtraPickup__c</columns>
    <columns>PO_Mandatory_Scenario__c</columns>
    <columns>Duration__c</columns>
    <columns>Occurrence_Type__c</columns>
    <columns>ServiceProdFilter__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>IsTransformation__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mapping</label>
</ListView>