force-app/main/default/objects/QOServiceProductCombination__mdt/listViews/Work_Order_Metadata.listView-meta.xml
<ListView>
    <fullName>Work_Order_Metadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Service__c</columns>
    <columns>Primary_Component__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>Duration__c</columns>
    <columns>IsTransformation__c</columns>
    <columns>Occurrence_Type__c</columns>
    <columns>ServiceProdFilter__c</columns>
    <filterScope>Everything</filterScope>
    <label>Work Order Metadata</label>
</ListView>